# gr_tradinggame

./: .gitignore  README.md  client.py  example_manual.ipynb  example_server.ipynb  example_testing.ipynb  hello.py  interactive_game.py  pyproject.toml  python_game.py  server.py  test2.py
coding/: client.py  example_client.py  example_ui.py  gui.py  util.py
notebooks/: example_client.ipynb  example_clients.ipynb  example_gui.ipynb  example_manual.ipynb  example_server.ipynb  example_testing.ipynb
src/gr_tradinggame/: __init__.py
src/gr_tradinggame/coding/: blackbox.py  client.py  example_client.py  example_gui.py  example_server.py  example_ui.py  gui.py  server.py  util.py
src/gr_tradinggame/manual/: __init__.py  example.py  manual_game.py
test/: pyproject.toml
test/src/: README.md  interactive_game.py  test.py
