[project]
name = "gr_tradinggame"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Soeren Wolfers", email = "soeren.wolfers@gresearch.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cloudpickle>=3.1.1",
    "flask>=3.1.1",
    "ipython>=9.2.0",
    "ipywidgets>=8.1.7",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly==5.10.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
