[project]
name = "gr_tradinggame"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Soeren Wolfers", email = "soeren.wolfers@gresearch.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cloudpickle==3.1.1",
    "flask==3.1.1",
    "flask-ngrok==0.0.25",
    "ipython==7.34.0",
    "ipywidgets>=7.7.1",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "plotly==5.10.0",
    "pyngrok==7.2.8",
    "requests==2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
